Add the @security secalert command that enables team members to send emails to SecAlert directly from GitHub issue comments
The command supports two flows:
- New thread: @security secalert <subject> sends a new email and posts the
thread ID back to the issue for future tracking.
- Reply: when a SecAlert-Thread-ID already exists on the issue, subsequent
invocations reply on the existing email thread regardless of subject.

Signed-off-by: Bruno Oliveira da Silva <bruno@abstractj.com>